# akshare_mcp_server

./: .gitignore  README.md  pyproject.toml  requirements.txt
.workbuddy/memory/: 2026-03-26.md
akshare_mcp_server/: __init__.py  server.py
